fix gpu renderer - wire settings and add cpu fallback
- add setSettings() to WebGPURenderer
- pass charWidth/charHeight from UI to GPU
- add CPU fallback with computeAsciiFromImage
- add demo button and error handling
- fix shader srgb conversion syntax

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -111,6 +111,7 @@
 
                         <div class="action-row">
                             <button id="go-btn">EXECUTE</button>
+                            <button id="demo-btn">RUN DEMO</button>
                         </div>
                     </div>
 
